@@ -87,7 +87,7 @@ class Oracle8SQLTemplateAction extends SQLTemplateAction {
             }
             else {
                 int updateCount = statement.executeUpdate();
-                updateCounts.add(new Integer(updateCount));
+                updateCounts.add(Integer.valueOf(updateCount));
                 QueryLogger.logUpdateCount(updateCount);
             }
 
