@@ -243,7 +243,7 @@ public class IndexPropertyList extends AbstractList implements ValueHolder {
     }
 
     protected void setIndexValue(Object object, int index) {
-        PropertyUtils.setProperty(object, indexProperty, new Integer(index));
+        PropertyUtils.setProperty(object, indexProperty, Integer.valueOf(index));
     }
 
     protected void shift(int startIndex, int afterIndexValue) {
